# Parsit-VLM

./: .gitignore  QWEN2_VL_INTEGRATION_SUMMARY.md  README.md  REPORT.md  TRAINING_DATA_FORMAT.md  create_sample_dataset.py  pyproject.toml  requirements.txt  test_actual_training.py  test_qwen2_vl_integration.py  test_qwen2_vl_minimal.py
data/: finetune_data.json
docs/: CHANGELOG.md  README.md
examples/: basic_usage.py
parsit/: __init__.py  conversation.py  inference.py  mm_utils.py  utils.py
parsit.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
parsit/data/: __init__.py  document_processor.py
parsit/eval/: __init__.py  document_eval.py
parsit/model/: __init__.py  builder.py  parsit_arch.py
parsit/serve/: __init__.py  cli.py  model_worker.py  sglang_worker.py
parsit/train/: __init__.py  data.py  parsit_trainer.py  train.py
qwenvl_finetune/: README.md  USAGE_GUIDE.md  create_synthetic_test_data.py  download_test_data.py  download_test_data_quick.py  requirements.txt  setup.py  simple_test.py  test_training.py  train_model.py
qwenvl_finetune/qwen2.5 vl/: __init__.py
qwenvl_finetune/qwen25vl_finetune.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
scripts/: data_converter.py  download_dataset.py  download_pretrain_data.sh  finetune.sh  finetune_4b.sh  finetune_qwen2_vl.sh  image_map.py  pretrain.sh  pretrain_4b.sh  pretrain_subset.py  train_lora.sh  train_lora_4b.sh  train_parsit.py  train_parsit_documents.sh  zero2.json  zero2_offload.json  zero3.json  zero3_4b.json  zero3_7b.json  zero3_offload.json
test_training/: dataset.json
(+35 files in other folders)
